# Blink-Fetch-Download-Manager

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.iss
function/: ChunkDownloader.py  Downloads.py  File_path.py  ResumeManager.py  SizeHelper.py
gui/: add_download_panel.py  app.py  download_backend.py  download_controller.py  history_manager.py  history_panel.py  progress_panel.py  settings_manager.py  settings_panel.py  sidebar.py  utils.py
